# RepoMemory

./: .gitignore  Dockerfile  Makefile  README.md  render.yaml
.github/workflows/: ci.yml  publish.yml
backend/: README.md  pyproject.toml
backend/benchmarks/queries/: comprehensive_benchmark.yaml  rag_evaluation.yaml  sample_repo.yaml
backend/src/repomemory/: __init__.py  cli.py  config.py
backend/src/repomemory/api/: app.py  routes_eval.py  routes_index.py  routes_memory.py  routes_search.py
backend/src/repomemory/context/: explainer.py  llm.py  packer.py
backend/src/repomemory/evaluation/: benchmark.py  metrics.py  rag_evaluator.py
backend/src/repomemory/indexer/: chunker.py  cloner.py  dependency_graph.py  embedder.py  metadata.py  orchestrator.py  scanner.py  symbols.py
backend/src/repomemory/memory/: tracker.py
backend/src/repomemory/models/: db.py  schemas.py  tables.py
backend/src/repomemory/retrieval/: combiner.py  graph.py  lexical.py  orchestrator.py  path.py  semantic.py  symbol.py  task_router.py  weight_learner.py
backend/tests/: conftest.py  test_cli.py  test_cloner.py  test_dependency_graph.py  test_embedder.py  test_llm.py  test_metrics.py  test_packer.py  test_rag_evaluator.py  test_retrieval.py  test_scanner.py  test_symbols.py  test_weight_learner.py
backend/tests/fixtures/sample_repo/: README.md
backend/tests/fixtures/sample_repo/auth/: session.py  token_handler.py
backend/tests/fixtures/sample_repo/config/: settings.py
backend/tests/fixtures/sample_repo/models/: database.py
backend/tests/fixtures/sample_repo/routes/: api.py
backend/tests/fixtures/sample_repo/services/: api_client.ts
backend/tests/fixtures/sample_repo/tests/: test_auth.py  test_routes.py
backend/tests/fixtures/sample_repo/utils/: helpers.js
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: CodeBlock.tsx  ContextPackView.tsx  ResultCard.tsx  Sidebar.tsx
frontend/src/pages/: MemoryPage.tsx  ReposPage.tsx  SearchPage.tsx
frontend/src/test/: ContextPackView.test.tsx  ResultCard.test.tsx  Sidebar.test.tsx  api.test.ts  markdownExport.test.ts
