[project]
name = "repomemory"
version = "0.2.0"
description = "AI-powered code retrieval engine — index any GitHub repo by URL and search with natural language"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Aayush Kumar"}]
keywords = [
    "code-search", "retrieval", "ai", "llm", "embeddings",
    "github", "code-understanding", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    # Core
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "faiss-cpu>=1.8.0",
    "tiktoken>=0.7.0",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.9.0",
    "pathspec>=0.12.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    # Code parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    # Git
    "gitpython>=3.1.0",
    # CLI & display
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "slowapi>=0.1.9",
]
local = [
    "sentence-transformers>=3.0.0",
]
llm = [
    "groq>=0.25.0",
]
all = [
    "repomemory[server,local,llm]",
]
dev = [
    "repomemory[all]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
repomemory = "repomemory.cli:main"

[project.urls]
Homepage = "https://github.com/aayushakumar/RepoMemory"
Repository = "https://github.com/aayushakumar/RepoMemory"
Issues = "https://github.com/aayushakumar/RepoMemory/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repomemory"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["tests/fixtures"]
